--- a/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-04-flexbox-parte-2/style.css
+++ b/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-04-flexbox-parte-2/style.css
@@ -23,8 +23,9 @@
   }
   
   .menu-container {
-      width: 500px;
+    width: 500px;
     display: flex;
+    align-self: center;
   }
   
   .menu-container ul {
