--- a/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-04-flexbox-parte-2/style.css
+++ b/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-04-flexbox-parte-2/style.css
@@ -47,6 +47,7 @@
   .main-container {
     display: flex;
     flex-wrap: no-wrap;
+    justify-content: space-around;
   }
   
   .movie-container {
@@ -79,7 +80,7 @@
     width: 350px;
     display: flex;
     flex-direction: column;
-    margin: 20px;
+    justify-content: center;
   }
   
   .aside-container h3, h4 {
@@ -91,3 +92,5 @@
     margin: 10px 0;
     text-align: justify;
   }
+
+  /*Parte no Ex 02*/
