--- a/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-04-flexbox-parte-2/style.css
+++ b/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-04-flexbox-parte-2/style.css
@@ -51,6 +51,7 @@
   }
   
   .movie-container {
+    width: 700px;
     display: flex;
     flex-direction: column;
   }
@@ -67,6 +68,7 @@
   }
   
   .card-container div {
+    width: 16%;
     align-items: center;
     background-color: #5C687C;
     border: black solid 1px;
