--- a/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-05-css-responsivo/Conteúdo/style.css
+++ b/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-05-css-responsivo/Conteúdo/style.css
@@ -71,7 +71,12 @@ p strong {
 @media screen and (max-width:500px){
   .card:nth-of-type(1){
     display: block;
-  }
-
- 
+  } 
 }
+
+@media screen and (min-width:600px) and (max-width:1000px){
+  .card:nth-of-type(2){
+    display: block;
+  }
+}
+
