--- a/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-05-css-responsivo/Conteúdo/style.css
+++ b/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-05-css-responsivo/Conteúdo/style.css
@@ -80,3 +80,8 @@ p strong {
   }
 }
 
+@media screen and (min-width:650px) and (max-width:950px){
+  .card:nth-of-type(3){
+    display: block;
+  }
+}
