--- a/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-05-css-responsivo/Conteúdo/style.css
+++ b/fundamentos/bloco-06-html-forms-flexbox-responsivo/dia-05-css-responsivo/Conteúdo/style.css
@@ -5,7 +5,7 @@ body {
   flex-flow: column wrap;
   font-family: Raleway, sans-serif;
   justify-content: center;
-  overflow: hidden;
+
   width: 100vw;
 }
 
@@ -72,6 +72,10 @@ p strong {
   .card:nth-of-type(1){
     display: block;
   } 
+
+  p.trick{
+    color: black;
+  }
 }
 
 @media screen and (min-width:600px) and (max-width:1000px){
@@ -85,3 +89,4 @@ p strong {
     display: block;
   }
 }
+
