--- a/frontend/bloco-11--componentes/dia-2-formularios/exercicios/src/Form.css
+++ b/frontend/bloco-11--componentes/dia-2-formularios/exercicios/src/Form.css
@@ -7,3 +7,29 @@
 #container-form input {
   margin: 10px 5px;
 }
+
+fieldset {
+  width: 600px;
+  margin: 30px auto;
+  padding: 0 2%;
+  background-color: #a5b1af;
+}
+
+#container-form input[type=text] {
+  margin: 10px auto;
+  width: 100%;
+  height: 30px;
+}
+
+fieldset textarea{
+  margin: 10px auto;
+  width: 100%;
+  height: 100px;
+}
+
+.buttons input[type=submit] {
+  cursor: pointer;
+  margin: 0 20px 50px;
+  width: 100px;
+  height: 40px;
+}
